Replace logo divs with image elements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="border-b border-gray-800 bg-[#0d1117]/80 backdrop-blur-md sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
             <div class="flex items-center gap-2">
-                <div class="w-8 h-8 bg-orange-600 rounded flex items-center justify-center text-white font-bold">🦀</div>
+                <img src="https://raw.githubusercontent.com/tassiovirginio/try-rs.site/refs/heads/main/logo.png" alt="try-rs logo" class="w-8 h-8 object-contain">
                 <span class="text-xl font-bold text-white tracking-tight italic">try-rs</span>
             </div>
             <div class="flex items-center gap-6">
@@ -341,7 +341,7 @@
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8 text-center md:text-left">
             <div class="flex flex-col gap-2">
                 <div class="flex items-center justify-center md:justify-start gap-2">
-                    <div class="w-6 h-6 bg-orange-600 rounded flex items-center justify-center text-[10px] text-white font-bold">🦀</div>
+                    <img src="https://raw.githubusercontent.com/tassiovirginio/try-rs.site/refs/heads/main/logo.png" alt="try-rs logo" class="w-6 h-6 object-contain">
                     <span class="text-white font-bold">try-rs</span>
                 </div>
                 <span class="text-gray-500 text-sm">Built by <a href="https://github.com/tassiovirginio" class="text-gray-300 hover:text-orange-500 underline decoration-gray-700 underline-offset-4">Tássio Virgínio</a></span>
