Update image class and container styles in index.html

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                     <div class="w-12"></div>
                 </div>
                 
-                <div class="relative aspect-video bg-black flex items-center justify-center group">
+                <div class="relative bg-[#010409] group">
                     <img src="https://raw.githubusercontent.com/tassiovirginio/try-rs/refs/heads/main/try-rs.gif" 
                          alt="try-rs TUI Demo" 
-                         class="w-full h-full object-contain">
+                         class="w-full h-auto block">
                     <div class="absolute bottom-4 right-4 bg-black/60 backdrop-blur-md border border-gray-700 px-3 py-1.5 rounded-lg text-xs mono text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity">
                         Real TUI Demo
                     </div>
