Add badges section to index.html
Added badges section with links to GitHub, Crates.io, and AUR.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,28 @@
                     deserve a place.
                 </span>
             </h1>
-            <p class="text-xl text-gray-400 mb-10 max-w-2xl mx-auto leading-relaxed">
+            <p class="text-xl text-gray-400 mb-8 max-w-2xl mx-auto leading-relaxed">
                 A lightning-fast TUI to manage temporary projects. Create, explore, and clone repositories instantly without cluttering your system.
             </p>
+
+            <!-- Badges Section -->
+            <div class="flex flex-wrap justify-center gap-3 mb-10">
+                <a href="https://github.com/tassiovirginio/try-rs/releases" target="_blank">
+                    <img src="https://img.shields.io/github/v/release/tassiovirginio/try-rs?style=flat-square&color=ea580c&label=GitHub" alt="GitHub release">
+                </a>
+                <a href="https://crates.io/crates/try-rs" target="_blank">
+                    <img src="https://img.shields.io/crates/v/try-rs.svg?style=flat-square&color=ea580c" alt="Crates.io version">
+                </a>
+                <a href="https://aur.archlinux.org/packages/try-rs-bin" target="_blank">
+                    <img src="https://img.shields.io/aur/version/try-rs-bin?style=flat-square&color=1793d1&label=AUR" alt="AUR version">
+                </a>
+                <a href="https://github.com/tassiovirginio/try-rs" target="_blank">
+                    <img src="https://img.shields.io/github/stars/tassiovirginio/try-rs?style=flat-square&color=ea580c" alt="GitHub stars">
+                </a>
+                <a href="https://github.com/tassiovirginio/try-rs/blob/main/LICENSE" target="_blank">
+                    <img src="https://img.shields.io/github/license/tassiovirginio/try-rs?style=flat-square&color=gray" alt="License">
+                </a>
+            </div>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mb-12">
                 <div class="w-full sm:w-auto flex items-center bg-[#161b22] border border-gray-700 rounded-xl p-1 pl-4">
