--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>try-rs — Your experiments deserve a place</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- Carregando a biblioteca Lucide com defer para garantir ordem de execução -->
+    <script src="https://unpkg.com/lucide@latest" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -355,6 +356,24 @@
         </div>
     </section>
 
+    <!-- Powered By Section -->
+    <div class="max-w-6xl mx-auto py-12 border-t border-gray-800/50 flex flex-wrap justify-center gap-8 text-xs text-gray-500 uppercase tracking-widest bg-[#0d1117]">
+        <div class="flex items-center gap-3">
+            <span>Developed with</span>
+            <a href="https://www.rust-lang.org/" target="_blank" class="flex items-center gap-2 text-gray-400 hover:text-orange-500 transition-colors group">
+                <i data-lucide="cpu" class="w-4 h-4 text-orange-600 group-hover:scale-110 transition-transform"></i>
+                <span class="font-bold">Rust Language</span>
+            </a>
+        </div>
+        <div class="flex items-center gap-3">
+            <span>Powered by</span>
+            <a href="https://ratatui.rs/" target="_blank" class="flex items-center gap-2 text-gray-400 hover:text-green-500 transition-colors group">
+                <i data-lucide="terminal" class="w-4 h-4 text-green-600 group-hover:scale-110 transition-transform"></i>
+                <span class="font-bold">Ratatui Library</span>
+            </a>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="py-12 border-t border-gray-800 px-6 bg-[#010409]">
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8 text-center md:text-left">
@@ -371,35 +390,25 @@
                 <a href="https://github.com/tassiovirginio/try-rs/blob/main/LICENSE" class="hover:text-white transition-colors">MIT License</a>
             </div>
         </div>
-
-        <!-- Powered By Section -->
-        <div class="max-w-6xl mx-auto mt-10 pt-8 border-t border-gray-800/50 flex flex-wrap justify-center gap-8 text-xs text-gray-500 uppercase tracking-widest">
-            <div class="flex items-center gap-3">
-                <span>Developed with</span>
-                <a href="https://www.rust-lang.org/" target="_blank" class="flex items-center gap-2 text-gray-400 hover:text-orange-500 transition-colors group">
-                    <i data-lucide="cpu" class="w-4 h-4 text-orange-600 group-hover:scale-110 transition-transform"></i>
-                    <span class="font-bold">Rust Language</span>
-                </a>
-            </div>
-            <div class="flex items-center gap-3">
-                <span>Powered by</span>
-                <a href="https://ratatui.rs/" target="_blank" class="flex items-center gap-2 text-gray-400 hover:text-green-500 transition-colors group">
-                    <i data-lucide="terminal" class="w-4 h-4 text-green-600 group-hover:scale-110 transition-transform"></i>
-                    <span class="font-bold">Ratatui Library</span>
-                </a>
-            </div>
-        </div>
     </footer>
 
     <script>
-        // Initialize Lucide Icons
-        lucide.createIcons();
+        // Função para inicializar os ícones de forma segura
+        function initIcons() {
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
+        }
 
-        // Installation Tabs Logic
+        // Aguardar o carregamento completo da página e do script Lucide
+        window.addEventListener('load', initIcons);
+        document.addEventListener('DOMContentLoaded', initIcons);
+
+        // Lógica dos separadores de instalação
         function switchTab(tab, cmd) {
             document.getElementById('install-cmd-text').innerText = cmd;
             
-            // Update visual requirements
+            // Atualizar requisito visual
             const reqEl = document.getElementById('install-requirement');
             if (tab === 'nix') {
                 reqEl.innerHTML = 'Requirements: <code class="text-gray-400">nix</code> with flakes enabled.';
@@ -411,21 +420,23 @@
                 reqEl.innerHTML = 'Requirements: <code class="text-gray-400">gh</code> CLI or browser access.';
             }
 
-            // Update active classes
+            // Atualizar classes ativas
             const tabs = ['cargo', 'nix', 'aur', 'binary'];
             tabs.forEach(t => {
                 const el = document.getElementById('tab-' + t);
-                if (t === tab) {
-                    el.classList.add('tab-active');
-                    el.classList.remove('text-gray-400', 'hover:text-white');
-                } else {
-                    el.classList.remove('tab-active');
-                    el.classList.add('text-gray-400', 'hover:text-white');
+                if (el) {
+                    if (t === tab) {
+                        el.classList.add('tab-active');
+                        el.classList.remove('text-gray-400', 'hover:text-white');
+                    } else {
+                        el.classList.remove('tab-active');
+                        el.classList.add('text-gray-400', 'hover:text-white');
+                    }
                 }
             });
         }
 
-        // Generic copy to clipboard function
+        // Função genérica para copiar para o clipboard
         function copyToClipboard(text) {
             const el = document.createElement('textarea');
             el.value = text;
@@ -439,10 +450,10 @@
             copyToClipboard(text);
             const originalIcon = btn.innerHTML;
             btn.innerHTML = '<i data-lucide="check" class="w-4 h-4 text-green-500"></i>';
-            lucide.createIcons();
+            if (typeof lucide !== 'undefined') lucide.createIcons();
             setTimeout(() => {
                 btn.innerHTML = originalIcon;
-                lucide.createIcons();
+                if (typeof lucide !== 'undefined') lucide.createIcons();
             }, 2000);
         }
 
