Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>try-rs — Your experiments deserve a place</title>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/tassiovirginio/try-rs.site/refs/heads/main/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Carregando a biblioteca Lucide com defer para garantir ordem de execução -->
     <script src="https://unpkg.com/lucide@latest" defer></script>
