--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body class="bg-[#0d1117] text-gray-300 selection:bg-orange-500/30">
 
-    <!-- Navigation -->
+    <!-- Navegação -->
     <nav class="border-b border-gray-800 bg-[#0d1117]/80 backdrop-blur-md sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
             <div class="flex items-center gap-2">
@@ -49,7 +49,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Secção Hero -->
     <header class="pt-20 pb-32 px-6 relative overflow-hidden bg-grid">
         <div class="max-w-4xl mx-auto text-center relative z-10">
             <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-orange-500/10 border border-orange-500/20 text-orange-500 text-sm font-medium mb-6">
@@ -66,7 +66,7 @@
                 A lightning-fast TUI to manage temporary projects. Create, explore, and clone repositories instantly without cluttering your system.
             </p>
 
-            <!-- Badges Section -->
+            <!-- Secção de Badges -->
             <div class="flex flex-wrap justify-center gap-3 mb-10">
                 <a href="https://github.com/tassiovirginio/try-rs/releases" target="_blank">
                     <img src="https://img.shields.io/github/v/release/tassiovirginio/try-rs?style=flat-square&color=ea580c&label=GitHub" alt="GitHub release">
@@ -75,7 +75,7 @@
                     <img src="https://img.shields.io/crates/v/try-rs.svg?style=flat-square&color=ea580c" alt="Crates.io version">
                 </a>
                 <a href="https://aur.archlinux.org/packages/try-rs-bin" target="_blank">
-                    <img src="https://img.shields.io/aur/version/try-rs-bin?style=flat-square&color=1793d1&label=AUR" alt="AUR version">
+                    <img src="https://img.shields.io/aur/version/try-rs-bin?style=flat-square&color=1793d1&label=AUR&cacheSeconds=300" alt="AUR version">
                 </a>
                 <a href="https://github.com/tassiovirginio/try-rs" target="_blank">
                     <img src="https://img.shields.io/github/stars/tassiovirginio/try-rs?style=flat-square&color=ea580c" alt="GitHub stars">
@@ -101,7 +101,7 @@
         </div>
     </header>
 
-    <!-- Demo Section -->
+    <!-- Secção de Demonstração -->
     <section class="px-6 -mt-16 relative z-20">
         <div class="max-w-5xl mx-auto">
             <div class="bg-[#010409] border border-gray-700 rounded-xl shadow-2xl overflow-hidden shadow-orange-500/10">
@@ -130,7 +130,7 @@
         </div>
     </section>
 
-    <!-- CLI Usage Section -->
+    <!-- Uso da CLI -->
     <section id="usage" class="py-32 px-6">
         <div class="max-w-4xl mx-auto">
             <h2 class="text-3xl font-bold text-white mb-8 flex items-center gap-3">
@@ -153,7 +153,7 @@
         </div>
     </section>
 
-    <!-- Features Section -->
+    <!-- Todas as Funcionalidades -->
     <section id="features" class="py-24 px-6 bg-[#161b22]/30 border-y border-gray-800">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-16">
