--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body class="bg-[#0d1117] text-gray-300 selection:bg-orange-500/30">
 
-    <!-- Navegação -->
+    <!-- Navigation -->
     <nav class="border-b border-gray-800 bg-[#0d1117]/80 backdrop-blur-md sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
             <div class="flex items-center gap-2">
@@ -49,7 +49,7 @@
         </div>
     </nav>
 
-    <!-- Secção Hero -->
+    <!-- Hero Section -->
     <header class="pt-20 pb-32 px-6 relative overflow-hidden bg-grid">
         <div class="max-w-4xl mx-auto text-center relative z-10">
             <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-orange-500/10 border border-orange-500/20 text-orange-500 text-sm font-medium mb-6">
@@ -66,7 +66,7 @@
                 A lightning-fast TUI to manage temporary projects. Create, explore, and clone repositories instantly without cluttering your system.
             </p>
 
-            <!-- Secção de Badges -->
+            <!-- Badges Section -->
             <div class="flex flex-wrap justify-center gap-3 mb-10">
                 <a href="https://github.com/tassiovirginio/try-rs/releases" target="_blank">
                     <img src="https://img.shields.io/github/v/release/tassiovirginio/try-rs?style=flat-square&color=ea580c&label=GitHub" alt="GitHub release">
@@ -101,7 +101,7 @@
         </div>
     </header>
 
-    <!-- Secção de Demonstração -->
+    <!-- Demo Section -->
     <section class="px-6 -mt-16 relative z-20">
         <div class="max-w-5xl mx-auto">
             <div class="bg-[#010409] border border-gray-700 rounded-xl shadow-2xl overflow-hidden shadow-orange-500/10">
@@ -130,30 +130,62 @@
         </div>
     </section>
 
-    <!-- Uso da CLI -->
+    <!-- CLI Commands Section -->
     <section id="usage" class="py-32 px-6">
         <div class="max-w-4xl mx-auto">
-            <h2 class="text-3xl font-bold text-white mb-8 flex items-center gap-3">
-                <i data-lucide="play-circle" class="text-orange-500"></i> CLI Usage
+            <h2 class="text-3xl font-bold text-white mb-6 flex items-center gap-3">
+                <i data-lucide="play-circle" class="text-orange-500"></i> CLI Commands
             </h2>
-            <div class="space-y-6">
-                <div class="space-y-3">
-                    <p class="text-gray-400">Launch the interactive TUI interface:</p>
-                    <div class="code-block p-4 mono text-orange-400">try</div>
-                </div>
-                <div class="space-y-3">
-                    <p class="text-gray-400">Create a new temporary workspace with a specific name:</p>
-                    <div class="code-block p-4 mono text-orange-400">try <span class="text-gray-500">&lt;workspace_name&gt;</span></div>
-                </div>
-                <div class="space-y-3">
-                    <p class="text-gray-400">Clone a repository directly into a temporary workspace:</p>
-                    <div class="code-block p-4 mono text-orange-400">try <span class="text-gray-500">&lt;github_url&gt;</span></div>
-                </div>
+            <p class="text-gray-400 mb-8">You can also bypass the UI and use direct commands:</p>
+            
+            <div class="overflow-x-auto border border-gray-800 rounded-xl bg-gray-900/10">
+                <table class="w-full text-left border-collapse">
+                    <thead>
+                        <tr class="border-b border-gray-800">
+                            <th class="px-6 py-4 text-xs uppercase tracking-wider text-gray-500 font-semibold">Command</th>
+                            <th class="px-6 py-4 text-xs uppercase tracking-wider text-gray-500 font-semibold">Description</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-800/50">
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs</code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Opens the TUI</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs <span class="text-gray-600">&lt;name&gt;</span></code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Create (or jump to) a named experiment</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs <span class="text-gray-600">&lt;url&gt;</span></code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Clones a repository into a dated folder</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs <span class="text-gray-600">&lt;url&gt; &lt;name&gt;</span></code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Clones a repository into a specific folder name</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs -s <span class="text-gray-600">&lt;url&gt;</span></code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Shallow clone (depth 1)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs --setup <span class="text-gray-600">&lt;shell&gt;</span></code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Setup shell integration (fish, zsh, bash, power-shell, nu-shell)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs --version</code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Show application version</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap"><code class="mono text-orange-400 text-sm">try-rs --help</code></td>
+                            <td class="px-6 py-4 text-sm text-gray-400">Show help message</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
 
-    <!-- Todas as Funcionalidades -->
+    <!-- Features Section -->
     <section id="features" class="py-24 px-6 bg-[#161b22]/30 border-y border-gray-800">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-16">
