Update badge section layout in index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </p>
 
             <!-- Badges Section -->
-            <div class="flex flex-wrap justify-center gap-3 mb-10">
+            <div class="flex flex-wrap items-center justify-center gap-3 mb-10">
                 <a href="https://github.com/tassiovirginio/try-rs/releases" target="_blank">
                     <img src="https://img.shields.io/github/v/release/tassiovirginio/try-rs?style=flat-square&color=ea580c&label=GitHub" alt="GitHub release">
                 </a>
@@ -77,6 +77,12 @@
                 <a href="https://aur.archlinux.org/packages/try-rs-bin" target="_blank">
                     <img src="https://img.shields.io/aur/version/try-rs-bin?style=flat-square&color=1793d1&label=AUR&cacheSeconds=300" alt="AUR version">
                 </a>
+                
+                <!-- Launchpad PPA Badge with official Badge Kit logo -->
+                <a href="https://launchpad.net/~tassiovirginio/+archive/ubuntu/try-rs" target="_blank" class="hover:opacity-80 transition-opacity">
+                    <img src="https://img.shields.io/badge/PPA-Launchpad-ea580c?style=flat-square&logo=ubuntu" alt="PPA Launchpad">
+                </a>
+
                 <a href="https://github.com/tassiovirginio/try-rs" target="_blank">
                     <img src="https://img.shields.io/github/stars/tassiovirginio/try-rs?style=flat-square&color=ea580c" alt="GitHub stars">
                 </a>
